--- a/src/app/dashboard/add-data/add-data.component.scss
+++ b/src/app/dashboard/add-data/add-data.component.scss
@@ -81,3 +81,22 @@ form {
 ::ng-deep mat-form-field {
   width: 300px;
 }
+
+
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // background-color: rgba(0,0,0,0.5); /* Dimmed background */
+  background-color: rgba(0,0,0,0.5); /* Dimmed background */
+  z-index: 1050; /* High z-index to be above everything else */
+}
+
+ngb-alert {
+  z-index: 1051; /* Ensure the alert is above the overlay */
+}
