reset Form on submit

--- a/src/app/dashboard/add-data/add-data.component.html
+++ b/src/app/dashboard/add-data/add-data.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="addChildForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="addChildForm" (ngSubmit)="onSubmit(formDirective)" #formDirective="ngForm">
   <h2>Ihr Kind anmelden!</h2>
   <div>
     <mat-form-field hintLabel="Name">
