add Menu using angular material

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,9 @@
 <div class="flex">
-    <h1>{{ title }}</h1>
-    <img width="500" src={{imagePath}}>&nbsp;&nbsp;
-    <a [routerLink]="['/dashboard']">Dashboard</a>&nbsp;&nbsp;
-    <a [routerLink]="['/about']">About</a>
+    <div><h1>{{ title }}</h1></div>
+    <div><img width="500" src={{imagePath}}>&nbsp;&nbsp;
+    <button mat-button [matMenuTriggerFor]="menu">Menu</button></div>
+    <mat-menu #menu="matMenu">
+        <button mat-menu-item [routerLink]="['/dashboard']">Dashboard</button>
+        <button mat-menu-item [routerLink]="['/about']">About</button>
+    </mat-menu>
 </div>
