--- a/src/app/dashboard/add-data/add-data.component.html
+++ b/src/app/dashboard/add-data/add-data.component.html
@@ -4,7 +4,7 @@
     <mat-form-field hintLabel="Name">
       <mat-label>Name des Kindes eingeben</mat-label>
       <input matInput placeholder="Vorname Nachname" formControlName="name" required>
-      <!-- <mat-error *ngIf="name.invalid">{{ getNameErrorMessage() }}</mat-error> -->
+      <mat-error *ngIf="name.invalid">{{ getNameErrorMessage() }}</mat-error>
     </mat-form-field>
   </div>
     
@@ -16,7 +16,7 @@
       <mat-hint>MM/DD/YYYY</mat-hint>
       <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker startView="year" [startAt]="startDate" class="custom-datepicker"></mat-datepicker>
-      <!-- <mat-error *ngIf="birthDate.invalid">{{ getBirthDateErrorMessage() }}</mat-error> -->
+      <mat-error *ngIf="birthDate.invalid">{{ getBirthDateErrorMessage() }}</mat-error>
     </mat-form-field>
   </div>
     
@@ -26,7 +26,7 @@
       <mat-select formControlName="kindergardenId">
         <mat-option *ngFor="let kindergarden of storeService.kindergardens" [value]="kindergarden.id">{{ kindergarden.name }}</mat-option>
       </mat-select>
-      <mat-hint align="end">Here's the dropdown arrow ^</mat-hint>
+      <mat-error *ngIf="birthDate.invalid">{{ getKindergardenErrorMessage() }}</mat-error>
     </mat-form-field>
   </div>
   <button type="submit">Erfassen</button>
