remove time from birthDate, only allow birthDates from the last 7 years

--- a/src/app/dashboard/add-data/add-data.component.html
+++ b/src/app/dashboard/add-data/add-data.component.html
@@ -11,7 +11,7 @@
   <div>
     <mat-form-field>
       <mat-label>Geburtsdatum auswählen</mat-label>
-      <input matInput [matDatepicker]="picker" formControlName="birthDate">
+      <input matInput [matDatepicker]="picker" [matDatepickerFilter]="myFilter" formControlName="birthDate">
       <!-- <mat-hint>DD/MM/YYYY</mat-hint> -->
       <mat-hint>MM/DD/YYYY</mat-hint>
       <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
