add colum for registrationDate, set registrationDate when adding Child

--- a/src/app/dashboard/data/data.component.html
+++ b/src/app/dashboard/data/data.component.html
@@ -5,6 +5,7 @@
         <p class="col-xl-1 col-lg-1">Adresse</p>
         <p class="col-xl-1 col-lg-1">Alter</p>
         <p class="col-xl-1 col-lg-1">Geburtsdatum</p>
+        <p class="col-xl-1 col-lg-1">Anmeldedatum</p>
         <p class="col-xl-1 col-lg-1"></p>
     </div>
     <div *ngFor="let child of storeService.children" class="row justify-content-center align-items-center">
@@ -13,6 +14,7 @@
         <p class="col-xl-1 col-lg-1">{{child.kindergarden.address}}</p>
         <p class="col-xl-1 col-lg-1">{{getAge(child.birthDate)}}</p>
         <p class="col-xl-1 col-lg-1">{{child.birthDate | date:'longDate'}}</p>
+        <p class="col-xl-1 col-lg-1">{{child.registrationDate | date:'longDate'}}</p>
         <div class="col-xl-1 col-lg-1">
             <button (click)="cancelRegistration(child.id)">Kind abmelden</button>
         </div>
