--- a/src/app/dashboard/data/data.component.html
+++ b/src/app/dashboard/data/data.component.html
@@ -1,11 +1,11 @@
 <div class="container">
     <div class="row justify-content-center align-items-center">
-        <p class="col-xl-2 col-lg-3">Name</p>
-        <p class="col-xl-2 col-lg-3">Kindergarten</p>
+        <p class="col-xl-2 col-lg-3"(click)="sortChildrenBy('name')">Name</p>
+        <p class="col-xl-2 col-lg-3"(click)="sortChildrenBy('kindergarden.name')">Kindergarten</p>
         <p class="col-xl-1 col-lg-1">Adresse</p>
         <p class="col-xl-1 col-lg-1">Alter</p>
         <p class="col-xl-1 col-lg-1">Geburtsdatum</p>
-        <p class="col-xl-1 col-lg-1">Anmeldedatum</p>
+        <p class="col-xl-1 col-lg-1"(click)="sortChildrenBy('registrationDate')">Anmeldedatum</p>
         <p class="col-xl-1 col-lg-1"></p>
     </div>
     <div *ngFor="let child of storeService.children" class="row justify-content-center align-items-center">
@@ -20,6 +20,52 @@
         </div>
     </div>
 
+    <!-- <table matSort (matSortChange)="sortChildrenBy($event)">
+        <tr>
+            <th mat-sort-header="name">Name</th>
+            <th mat-sort-header="kindergarden">Kindergarten</th>
+            <th>Adresse</th>
+            <th>Alter</th>
+            <th>Geburtsdatum</th>
+            <th mat-sort-header="registrationDate">Anmeldedatum</th>
+            <th></th>
+        </tr>
+      
+        @for (dessert of sortedData; track dessert) {
+          <tr>
+            <td>{{child.name}}</td>
+            <td>{{child.kindergarden.name}}</td>
+            <td>{{child.kindergarden.address}}</td>
+            <td>{{getAge(child.birthDate)}}</td>
+            <td>{{child.birthDate | date:'longDate'}}</td>
+            <td>{{child.registrationDate | date:'longDate'}}</td>
+            <div class="col-xl-1 col-lg-1">
+                <button (click)="cancelRegistration(child.id)">Kind abmelden</button>
+            </div>
+          </tr>
+        }
+      </table> -->
+    
+    <!-- <div matSort matSortActive="name" matSortDirection="asc" class="row justify-content-center align-items-center">
+        <p class="col-xl-2 col-lg-3" mat-sort-header="name">Name</p>
+        <p class="col-xl-2 col-lg-3" mat-sort-header="kindergarten">Kindergarten</p>
+        <p class="col-xl-1 col-lg-1">Adresse</p>
+        <p class="col-xl-1 col-lg-1">Alter</p>
+        <p class="col-xl-1 col-lg-1">Geburtsdatum</p>
+        <p class="col-xl-1 col-lg-1" mat-sort-header="anmeldedatum">Anmeldedatum</p>
+        <p class="col-xl-1 col-lg-1"></p>
+    </div>
+    <div *ngFor="let child of storeService.children | sort:sort" class="row justify-content-center align-items-center">
+        <p class="col-xl-2 col-lg-3">{{child.name}}</p>
+        <p class="col-xl-2 col-lg-3">{{child.kindergarden.name}}</p>
+        <p class="col-xl-1 col-lg-1">{{child.kindergarden.address}}</p>
+        <p class="col-xl-1 col-lg-1">{{getAge(child.birthDate)}}</p>
+        <p class="col-xl-1 col-lg-1">{{child.birthDate | date:'longDate'}}</p>
+        <p class="col-xl-1 col-lg-1">{{child.registrationDate | date:'longDate'}}</p>
+        <div class="col-xl-1 col-lg-1">
+            <button (click)="cancelRegistration(child.id)">Kind abmelden</button>
+        </div>
+    </div> -->
     <div class="row">
         <div class="col-12 d-flex justify-content-center">
           <mat-paginator [length]="returnAllItems()"
