--- a/src/app/dashboard/data/data.component.html
+++ b/src/app/dashboard/data/data.component.html
@@ -1,24 +1,27 @@
 <div class="container">
-    <div class="row justify-content-center align-items-center">
-        <p class="col-xl-2 col-lg-3"(click)="sortChildrenBy('name')">Name</p>
-        <p class="col-xl-2 col-lg-3"(click)="sortChildrenBy('kindergarden.name')">Kindergarten</p>
-        <p class="col-xl-1 col-lg-1">Adresse</p>
-        <p class="col-xl-1 col-lg-1">Alter</p>
-        <p class="col-xl-1 col-lg-1">Geburtsdatum</p>
-        <p class="col-xl-1 col-lg-1"(click)="sortChildrenBy('registrationDate')">Anmeldedatum</p>
-        <p class="col-xl-1 col-lg-1"></p>
-    </div>
-    <div *ngFor="let child of storeService.children" class="row justify-content-center align-items-center">
-        <p class="col-xl-2 col-lg-3">{{child.name}}</p>
-        <p class="col-xl-2 col-lg-3">{{child.kindergarden.name}}</p>
-        <p class="col-xl-1 col-lg-1">{{child.kindergarden.address}}</p>
-        <p class="col-xl-1 col-lg-1">{{getAge(child.birthDate)}}</p>
-        <p class="col-xl-1 col-lg-1">{{child.birthDate | date:'longDate'}}</p>
-        <p class="col-xl-1 col-lg-1">{{child.registrationDate | date:'longDate'}}</p>
-        <div class="col-xl-1 col-lg-1">
-            <button (click)="cancelRegistration(child.id)">Kind abmelden</button>
-        </div>
-    </div>
+    <table>
+            
+        <tr class="row justify-content-center align-items-center">
+            <th class="col-xl-2 col-lg-3"(click)="sortChildrenBy('name')">Name</th>
+            <th class="col-xl-2 col-lg-3"(click)="sortChildrenBy('kindergarden.name')">Kindergarten</th>
+            <th class="col-xl-1 col-lg-1">Adresse</th>
+            <th class="col-xl-1 col-lg-1">Alter</th>
+            <th class="col-xl-1 col-lg-1">Geburtsdatum</th>
+            <th class="col-xl-1 col-lg-1"(click)="sortChildrenBy('registrationDate')">Anmeldedatum</th>
+            <th class="col-xl-1 col-lg-1"></th>
+        </tr>
+        <tr *ngFor="let child of storeService.children" class="row justify-content-center align-items-center">
+            <td class="col-xl-2 col-lg-3">{{child.name}}</td>
+            <td class="col-xl-2 col-lg-3">{{child.kindergarden.name}}</td>
+            <td class="col-xl-1 col-lg-1">{{child.kindergarden.address}}</td>
+            <td class="col-xl-1 col-lg-1">{{getAge(child.birthDate)}}</td>
+            <td class="col-xl-1 col-lg-1">{{child.birthDate | date:'longDate'}}</td>
+            <td class="col-xl-1 col-lg-1">{{child.registrationDate | date:'longDate'}}</td>
+            <td class="col-xl-1 col-lg-1">
+                <button (click)="cancelRegistration(child.id)">Kind abmelden</button>
+            </td>
+        </tr>
+    </table>
 
     <!-- <table matSort (matSortChange)="sortChildrenBy($event)">
         <tr>
