--- a/src/app/dashboard/data/data.component.html
+++ b/src/app/dashboard/data/data.component.html
@@ -1,13 +1,13 @@
 <div class="container">
-    <table>
+    <table matSort (matSortChange)="sortData($event)">
             
         <tr class="row justify-content-center align-items-center">
-            <th class="col-xl-2 col-lg-3"(click)="sortChildrenBy('name')">Name</th>
-            <th class="col-xl-2 col-lg-3"(click)="sortChildrenBy('kindergarden.name')">Kindergarten</th>
+            <th class="col-xl-2 col-lg-3" mat-sort-header="name">Name</th>
+            <th class="col-xl-2 col-lg-3" mat-sort-header="kindergarden.name">Kindergarten</th>
             <th class="col-xl-1 col-lg-1">Adresse</th>
             <th class="col-xl-1 col-lg-1">Alter</th>
-            <th class="col-xl-1 col-lg-1">Geburtsdatum</th>
-            <th class="col-xl-1 col-lg-1"(click)="sortChildrenBy('registrationDate')">Anmeldedatum</th>
+            <th class="col-xl-2 col-lg-3">Geburtsdatum</th>
+            <th class="col-xl-2 col-lg-3" mat-sort-header="registrationDate">Anmeldedatum</th>
             <th class="col-xl-1 col-lg-1"></th>
         </tr>
         <tr *ngFor="let child of storeService.children" class="row justify-content-center align-items-center">
@@ -15,8 +15,8 @@
             <td class="col-xl-2 col-lg-3">{{child.kindergarden.name}}</td>
             <td class="col-xl-1 col-lg-1">{{child.kindergarden.address}}</td>
             <td class="col-xl-1 col-lg-1">{{getAge(child.birthDate)}}</td>
-            <td class="col-xl-1 col-lg-1">{{child.birthDate | date:'longDate'}}</td>
-            <td class="col-xl-1 col-lg-1">{{child.registrationDate | date:'longDate'}}</td>
+            <td class="col-xl-2 col-lg-3">{{child.birthDate | date:'longDate'}}</td>
+            <td class="col-xl-2 col-lg-3">{{child.registrationDate | date:'longDate'}}</td>
             <td class="col-xl-1 col-lg-1">
                 <button (click)="cancelRegistration(child.id)">Kind abmelden</button>
             </td>
