--- a/src/app/dashboard/data/data.component.html
+++ b/src/app/dashboard/data/data.component.html
@@ -5,7 +5,7 @@
             <th class="col-xl-2 col-lg-3" mat-sort-header="name">Name</th>
             <th class="col-xl-2 col-lg-3" mat-sort-header="kindergarden.name">Kindergarten</th>
             <th class="col-xl-1 col-lg-1">Adresse</th>
-            <th class="col-xl-1 col-lg-1">Alter</th>
+            <th class="col-xl-1 col-lg-1 text-center">Alter</th>
             <th class="col-xl-2 col-lg-3">Geburtsdatum</th>
             <th class="col-xl-2 col-lg-3" mat-sort-header="registrationDate">Anmeldedatum</th>
             <th class="col-xl-1 col-lg-1"></th>
@@ -14,7 +14,7 @@
             <td class="col-xl-2 col-lg-3">{{child.name}}</td>
             <td class="col-xl-2 col-lg-3">{{child.kindergarden.name}}</td>
             <td class="col-xl-1 col-lg-1">{{child.kindergarden.address}}</td>
-            <td class="col-xl-1 col-lg-1">{{getAge(child.birthDate)}}</td>
+            <td class="col-xl-1 col-lg-1 text-center">{{getAge(child.birthDate)}}</td>
             <td class="col-xl-2 col-lg-3">{{child.birthDate | date:'longDate'}}</td>
             <td class="col-xl-2 col-lg-3">{{child.registrationDate | date:'longDate'}}</td>
             <td class="col-xl-1 col-lg-1">
@@ -22,58 +22,11 @@
             </td>
         </tr>
     </table>
-
-    <!-- <table matSort (matSortChange)="sortChildrenBy($event)">
-        <tr>
-            <th mat-sort-header="name">Name</th>
-            <th mat-sort-header="kindergarden">Kindergarten</th>
-            <th>Adresse</th>
-            <th>Alter</th>
-            <th>Geburtsdatum</th>
-            <th mat-sort-header="registrationDate">Anmeldedatum</th>
-            <th></th>
-        </tr>
-      
-        @for (dessert of sortedData; track dessert) {
-          <tr>
-            <td>{{child.name}}</td>
-            <td>{{child.kindergarden.name}}</td>
-            <td>{{child.kindergarden.address}}</td>
-            <td>{{getAge(child.birthDate)}}</td>
-            <td>{{child.birthDate | date:'longDate'}}</td>
-            <td>{{child.registrationDate | date:'longDate'}}</td>
-            <div class="col-xl-1 col-lg-1">
-                <button (click)="cancelRegistration(child.id)">Kind abmelden</button>
-            </div>
-          </tr>
-        }
-      </table> -->
-    
-    <!-- <div matSort matSortActive="name" matSortDirection="asc" class="row justify-content-center align-items-center">
-        <p class="col-xl-2 col-lg-3" mat-sort-header="name">Name</p>
-        <p class="col-xl-2 col-lg-3" mat-sort-header="kindergarten">Kindergarten</p>
-        <p class="col-xl-1 col-lg-1">Adresse</p>
-        <p class="col-xl-1 col-lg-1">Alter</p>
-        <p class="col-xl-1 col-lg-1">Geburtsdatum</p>
-        <p class="col-xl-1 col-lg-1" mat-sort-header="anmeldedatum">Anmeldedatum</p>
-        <p class="col-xl-1 col-lg-1"></p>
-    </div>
-    <div *ngFor="let child of storeService.children | sort:sort" class="row justify-content-center align-items-center">
-        <p class="col-xl-2 col-lg-3">{{child.name}}</p>
-        <p class="col-xl-2 col-lg-3">{{child.kindergarden.name}}</p>
-        <p class="col-xl-1 col-lg-1">{{child.kindergarden.address}}</p>
-        <p class="col-xl-1 col-lg-1">{{getAge(child.birthDate)}}</p>
-        <p class="col-xl-1 col-lg-1">{{child.birthDate | date:'longDate'}}</p>
-        <p class="col-xl-1 col-lg-1">{{child.registrationDate | date:'longDate'}}</p>
-        <div class="col-xl-1 col-lg-1">
-            <button (click)="cancelRegistration(child.id)">Kind abmelden</button>
-        </div>
-    </div> -->
     <div class="row">
         <div class="col-12 d-flex justify-content-center">
           <mat-paginator [length]="returnAllItems()"
                         [pageSize]="2"
-                        [pageSizeOptions]="[2, 2, 2, 2]"
+                        [pageSizeOptions]="[2, 5, 10, 20]"
                         (page)="handlePageEvent($event)"
                         aria-label="Select page">
           </mat-paginator>
