also show images for the kindergarten

--- a/src/app/kindergarden/kindergarden.component.html
+++ b/src/app/kindergarden/kindergarden.component.html
@@ -15,6 +15,8 @@
             <p>Adresse: {{ selectedKindergarten.address }}</p>
             <p>Betreiber: {{ selectedKindergarten.betreiber }}</p>
             <p>Typ: {{ selectedKindergarten.typ }}</p>
+            <br>
+            <img [src]="selectedKindergarten?.imagePath" alt="Kindergarten Bild" class="fixed-width-image">
         </div>
     </div>
 </div>
